# photo-compare

./: CMakeLists.txt  PhotoCompare.desktop  README.md  imagecomparewidget.cpp  imagecomparewidget.h  install.sh  main.cpp  mainwindow.cpp  mainwindow.h
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: imagecomparewidget.cpp  mainwindow.h
